# cppForrest

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  exportTreeClassifier.py  parameter_tree_forrest.ini  parameter_tree_simpleTree.ini  setup_cmake.bat  tree_model_simpleTree.txt  tree_model_stukture_info.txt
data/: data.txt  predicted.txt  treeClassifier.txt  treeClassifier_forrest.txt
src/: CMakeLists.txt  DecisionTree.cpp  DecisionTree.h  DecisionTree_global.h  Node.cpp  Node.h  Tree.cpp  Tree.h  TreeScalingParameter.cpp  TreeScalingParameter.h  scaleParam.ini
unitTests/: CMakeLists.txt
unitTests/decisionTreeTests/: BoostTest.cpp  BoostTest.h  CMakeLists.txt  data_tree.txt  test_forrest.txt  test_tree.txt  treeClassifier_forrest.txt  treeClassifier_tree.txt  tst_DecisionTree.cpp
